# excerpt-formatter

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  package.json  pyproject.toml  requirements.txt  slack_manager.py  webpack.common.js  webpack.config.js
app/: main.py  models.py  text_formatter.py
app/src/css/: main.scss
app/src/js/: main.js
app/src/templates/: main.html
excerpt_formatter/backend/app/: main.py  models.py  settings.py  slack_manager.py  text_formatter.py
excerpt_formatter/frontend/: package.json  webpack.common.js
excerpt_formatter/frontend/public/: index.html
excerpt_formatter/frontend/src/css/: main.scss
excerpt_formatter/frontend/src/js/: index.js
tests/: test_excerpt_formatter.py
