[tool.poetry]
name = "excerpt-formatter"
version = "0.1.0"
description = "A web application for Project Cutie, formatting stenographic input into the transcript standard."
authors = ["Conor McKillop <15077828+cmckillop@users.noreply.github.com>"]


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
aiofiles = "^0.5.0"
requests = "^2.24.0"
jinja2 = "^2.11.2"
python-multipart = "^0.0.5"
uvicorn = "^0.11.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pylint = "^2.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
